--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/site.css" />
+        <link rel="stylesheet" href="./css/site.css" />
     </head>
 
     <body>
@@ -15,7 +15,7 @@
                 <h1 style="color:#FFFFFA; text-align: center;margin-top: 50px;line-height: 2.0;">NGUYỄN ĐĂNG HÒA <br>Công nghệ thông tin K45A</h1>
             </div>
             <div class="image">
-                <img src="/images/chandung.jpg" alt="" width="100%" height="100%" style="border-radius:360px 360px 360px 360px;">
+                <img src="./images/chandung.jpg" alt="" width="100%" height="100%" style="border-radius:360px 360px 360px 360px;">
             </div>
         </div>
 
@@ -50,28 +50,28 @@
 
             <div class="images">
                 <div id="images-1">
-                    <img src="/images/1.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/1.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-2">
-                    <img src="/images/phongtraithang4.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/phongtraithang4.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-3">
-                    <img src="/images/sinhhaotdoi.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/sinhhaotdoi.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-4">
-                    <img src="/images/Thamcacbannghiavuquansu.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/Thamcacbannghiavuquansu.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-5">
-                    <img src="/images/Thamcacbannghiavuquansu2.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/Thamcacbannghiavuquansu2.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-6">
-                    <img src="/images/tinhnguyen.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/tinhnguyen.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-7">
-                    <img src="/images/traikynang.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/traikynang.jpg" alt="" width="100%" height="100%">
                 </div>
                 <div id="images-8">
-                    <img src="/images/xeommienphi.jpg" alt="" width="100%" height="100%">
+                    <img src="./images/xeommienphi.jpg" alt="" width="100%" height="100%">
                 </div>
             </div>
         </div>
