--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../BaiThi/css/site.css" />
+    <link rel="stylesheet" href="/css/index.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 nghệ thông tin K45A</h1>
         </div>
         <div class="image">
-            <img src="../BaiThi/images/chandung.jpg" alt="" width="100%" height="100%"
+            <img src="./images/chandung.jpg" alt="" width="100%" height="100%"
                 style="border-radius:360px 360px 360px 360px;">
         </div>
     </div>
@@ -58,28 +58,28 @@
         <div class="images">
 
             <div id="images-1">
-                <img src="../BaiThi/images/1.jpg" alt="" width="100%" height="100%">
+                <img src="./images/1.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-2">
-                <img src="../BaiThi/images/phongtraithang4.jpg" alt="" width="100%" height="100%">
+                <img src="./images/phongtraithang4.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-3">
-                <img src="../BaiThi/images/sinhhaotdoi.jpg" alt="" width="100%" height="100%">
+                <img src="./images/sinhhaotdoi.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-4">
-                <img src="../BaiThi/images/Thamcacbannghiavuquansu.jpg" alt="" width="100%" height="100%">
+                <img src="./images/Thamcacbannghiavuquansu.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-5">
-                <img src="../BaiThi/images/Thamcacbannghiavuquansu2.jpg" alt="" width="100%" height="100%">
+                <img src="./images/Thamcacbannghiavuquansu2.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-6">
-                <img src="../BaiThi/images/tinhnguyen.jpg" alt="" width="100%" height="100%">
+                <img src="./images/tinhnguyen.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-7">
-                <img src="../BaiThi/images/traikynang.jpg" alt="" width="100%" height="100%">
+                <img src="./images/traikynang.jpg" alt="" width="100%" height="100%">
             </div>
             <div id="images-8">
-                <img src="../BaiThi/images/xeommienphi.jpg" alt="" width="100%" height="100%">
+                <img src="./images/xeommienphi.jpg" alt="" width="100%" height="100%">
             </div>
         </div>
     </div>
